--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.2"
   },
   "scripts": {
@@ -27,5 +31,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
